<resources>
        <string name="app_name">Paver</string>
        <string name="s_no">S.no.</string>
        <string name="year">Year</string>
        <string name="subject_code">Subject Code</string>
        <string name="sign_out">Sign Out</string>
        <string name="about">About</string>
        <string name="bug_report">Bug Report</string>
        <string name="about_header">Paver- The Paper Saver App  v1.7</string>
        <string name="about_p1">While majority of the studentverse may be convinced that doing away with exams is by far the best way to save paper, we tend to think otherwise.</string>
        <string name="about_p2">With Paver we try to aggregate data spanning across streams, subjects and semesters, then compile and analyse this data, to find just the right dimensions for our humble answer paper not to get wasted.</string>
        <string name="about_p3">Wish there were an app to do the same for our marks 😅. Until then, feel free to contribute to the open source project:</string>
        <string name="about_dev"> Incubated under the aegis of \n Prof Paresh Kale- paresh.iitb@gmail.com \t\t\t\t\t\t\t\tDevelopers:\nChinmay Kabi - chinmay.kabi@gmail.com \t\t\t\t\t\t\t\tSmarak Das    - dsmarak17@gmail.com</string>
        <string name="abt_footer">Made with ❤ at NIT Rourkela</string>
        <string name="gitLink"><a href="https://github.com/Chinmay-KB/SurveyApp?files=1">Paver-Github</a></string>
    <string name="title_activity_about_new">AboutNew</string>
    <string name="instructions">Instructions</string>
    <string name="landing1">1: This button is used to add a new subject.Tapping on this takes you to the next screen to enter subject details.</string>
    <string name="landing2">2: These cards represent individual subjects for which you are entering the data. Tapping this will take you to the screen where you enter the data. You can start where you left the data entry for a particular subject.</string>
    <string name="landing3">3: Tapping on this opens up a navigation drawer from the left. It has 4 options which can be accessed by tapping on them. You reached these instructions this way, similarly you can read the about page, send a bug report to the developers and sign out from the app.</string>
    <string name="landing4">4: This displays your name taken from your google account.</string>
    <string name="subject1">1: This is the area where you enter details of the subject.</string>
    <string name="subject2">2: Enter whether the bundle you have is midsem or endsem.</string>
    <string name="subject3">3: Select the stream for majority of the students for that bundle of papers.</string>
    <string name="subject4">4: This button takes you to the next screen where you enter the data for each paper in the bundle.</string>
</resources>
